# aumai-error-taxonomy

./: AGENTS.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
docs/: api-reference.md  getting-started.md
examples/: quickstart.py
src/aumai_error_taxonomy/: __init__.py  async_core.py  cli.py  core.py  integration.py  models.py  store.py  suggestions.py
tests/: test_async_core.py  test_cli.py  test_core.py  test_integration.py  test_store.py  test_suggestions.py
