[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aumai-error-taxonomy"
version = "0.1.0"
description = "Standardized error codes and classification for agent failures"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "AumAI Contributors", email = "dev@aumai.dev" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0",
    "click>=8.0",
    "aumai-store>=0.1.0",
    "aumai-async-core>=0.1.0",
    "aumai-llm-core>=0.1.0",
    "aumai-integration>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "hypothesis>=6.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/aumai/aumai-error-taxonomy"
Documentation = "https://docs.aumai.dev/aumai-error-taxonomy"
Repository = "https://github.com/aumai/aumai-error-taxonomy"
Issues = "https://github.com/aumai/aumai-error-taxonomy/issues"

[project.scripts]
aumai-error-taxonomy = "aumai_error_taxonomy.cli:main"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "ANN", "S", "B"]

[tool.mypy]
strict = true
python_version = "3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
